[#13] 🛠️ 백엔드 - 연계 과정에서 발생한 오류 개선.
- 연계 과정에서 발생한 백엔드 오류를 수정하였습니다.